--- a/style.css
+++ b/style.css
@@ -3,39 +3,78 @@
   margin: 0;
   padding: 0;
 }
+
+body {
+  background-color: #c7c7c7;
+}
+
 .container {
   display: flex;
   height: 100vh;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .calculator {
-  height: 30em;
   width: 22em;
   border: 2px solid black;
   padding: 18px;
-  margin: 100px;
+  border-radius: 16px;
+  background-color: #000000;
+
+  box-shadow: 0 8px 6px rgba(0, 0, 0, 0.2);
+}
+
+.casio {
+  color: white;
+  margin: 2px;
+  font-weight: 700;
 }
 
 .display {
   border: 1px solid lightblue;
-  background-color: lightblue;
-  height: 2em;
+  background-color: #1a1a1a;
+  color: rgb(255, 255, 255);
+  height: 60px;
   display: flex;
   align-items: center;
-  padding: 10px;
+  justify-content: flex-end;
+  padding: 10px 15px;
   font-size: 40px;
+  font-family: monospace;
+  margin-bottom: 18px;
+  border-radius: 10px;
 }
 
 .numButtons {
-  font-size: 40px;
-  padding: 14px;
-}
-.numButtons.ac.del {
-  font-size: 25px;
+  box-sizing: border-box;
+  font-family: monospace;
+  font-size: 28px;
+  background-color: #333;
+  color: white;
+  padding: 13px 28px;
+  margin-bottom: 5px;
+  border-radius: 4px;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
 }
 
-.symbols {
-  display: block;
+.numButtons:hover {
+  background-color: #2c2c2c;
+  cursor: pointer;
+}
+
+.ac,
+.del {
+  font-size: 28px;
+  padding: 13px 56px;
+  color: #ff4d4d;
+}
+
+.symbol {
+  color: #00ffff;
+}
+.symbol:hover {
+  background-color: #1a1a1a;
+  box-shadow: inset 0 0 8px rgba(0, 255, 255, 0.2);
 }
